corrected layout and alignment

--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,7 @@
 /* projects style sheet (version 2) */
 
+/* Experimental CSS styles */
+
 body { background-color:#B0C4DE; }
 
 #img.format{ width: 25%; }
@@ -19,11 +21,11 @@ ol.rupper {list-style-type: upper-roman;}
 ol.rlower {list-style-type: lower-roman;}
 p { text-indent: 2.0em }
 p.c1 { border: 0px solid ; width: 90% ; color: #000000 }
-table.search { style="float:center;border:solid 1px #000;background-color:#cc9" }
-table.footer { style="float:center"; width: 95%; }
-tr.c1 { margin-left: 22em }
+table.search { style="float:center; border:solid 1px #000; background-color:#cc9" }
+table.footer { table-layout: fixed; margin-left: 2em; width: 1024px; margin-left:auto; margin-right:auto; }
+tr.c1 { margin-left: 22em ; padding: 10em; }
+td { padding-left: 5px; text-align: left; height: 5em; }
 
-/* Experimental CSS styles */
 
 /* No borders on image links */
 
